<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/margin"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                tools:context=".MainActivity">

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_install"
            android:id="@+id/check_install_button"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_update_install"
            style="@style/ReadableTextView"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/can_open_textview"
            style="@style/ReadableTextView"
            android:textStyle="bold"
            tools:text="NO"
            />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_in_store"
            android:id="@+id/show_in_store_button"
            />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_no_discount"
            android:id="@+id/open_no_discount_button"
            />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_fake_discount"
            android:id="@+id/open_fake_discount_button"
            />
</LinearLayout>
